--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -30,7 +30,7 @@
   font-size: 20px;
 }
 
-@media screen and (min-width: 350px) {
+@media screen and (min-width: 400px) {
   .NavBar--marquee {
     font-size: 24px;
   }
